# acc

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  STYLE  doc.odt
doc/: Makefile  paper.tex
include/acc/: ast.h  error.h  ext.h  intermediate.h  itm.h  list.h  options.h  parser.h  target.h  term.h  token.h
include/acc/emit/: asm.h  x86.h
include/acc/itm/: analyze.h  ast.h  opt.h  tag.h
include/acc/parsing/: ast.h  decl.h  expr.h  file.h  stat.h  token.h  tools.h
src/: README  ast.c  error.c  ext.c  intermediate.c  itm.c  list.c  main.c  options.c  parser.c  target.c  token.c
src/emit/: README  asm.c  x86.c
src/itm/: README  analyze.c  ast.c  opt.c  tag.c
src/parsing/: README  ast.c  decl.c  expr.c  file.c  stat.c  token.c  tools.c
tests/: Makefile
tests/expect_success/: Makefile  function_pointers.c  simple_declarations.c  structs.c  typedef.c
